// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersList View component should renders correctly 1`] = `
<Fragment>
  <Styled(Text)>
    lbl_orders_heading
  </Styled(Text)>
  <Styled(LineComp)
    borderColor="black"
    borderWidth={1}
    marginBottom={28}
    marginTop={0}
  />
  <RecentOrders
    handleComponentChange={[Function]}
    labels={Object {}}
    ordersListItems={Object {}}
    router={Object {}}
  />
</Fragment>
`;

exports[`OrdersList View component should renders correctly 2`] = `
<Fragment>
  <Styled(Text)>
    lbl_orders_heading
  </Styled(Text)>
  <Styled(LineComp)
    borderColor="black"
    borderWidth={1}
    marginBottom={28}
    marginTop={0}
  />
  <RecentOrders
    handleComponentChange={[Function]}
    labels={Object {}}
    ordersListItems={
      Array [
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000037172",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$24.95",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000037172&order_date=2019-10-04T07:22:00-04:00&dzip=10036&locale=en_US&type=p",
        },
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000036213",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$83.45",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000036213&order_date=2019-10-04T07:17:00-04:00&dzip=10036&locale=en_US&type=p",
        },
      ]
    }
    router={Object {}}
  />
  <PastOrders
    handleComponentChange={[Function]}
    labels={Object {}}
    ordersListItems={
      Array [
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000037172",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$24.95",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000037172&order_date=2019-10-04T07:22:00-04:00&dzip=10036&locale=en_US&type=p",
        },
        Object {
          "currencySymbol": "$",
          "isBOSSOrder": false,
          "isCanadaOrder": false,
          "isEcomOrder": true,
          "orderDate": "Oct 4, 2019",
          "orderNumber": "7000036213",
          "orderStatus": "lbl_orders_statusNa",
          "orderTotal": "$83.45",
          "orderTracking": "N/A",
          "orderTrackingUrl": "https://childrensplace.narvar.com/childrensplace/tracking/ups?order_number=7000036213&order_date=2019-10-04T07:17:00-04:00&dzip=10036&locale=en_US&type=p",
        },
      ]
    }
    router={Object {}}
  />
</Fragment>
`;
